[package]
name = "pallet-staking"
version = "37.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://hippius.com"
repository = "https://github.com/thenervelab/thebrain"
description = "FRAME pallet staking (polkadot v1.15.0)"
readme = "README.md"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { features = ["alloc", "derive"], workspace = true }
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
sp-io.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
sp-staking = { features = ["serde"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-session = { features = ["historical"], workspace = true }
pallet-authorship.workspace = true
sp-application-crypto = { features = ["serde"], workspace = true }
frame-election-provider-support.workspace = true
log = { workspace = true }
frame-benchmarking = { optional = true, workspace = true }
rand_chacha = { optional = true, workspace = true }
sp-core = { workspace = true }


[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-tracing= { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-staking-reward-curve = { default-features = true, path = "reward-curve" }
pallet-bags-list = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
substrate-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-benchmarking = { default-features = true, workspace = true }
frame-election-provider-support = { default-features = true, workspace = true }
rand_chacha = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"scale-info/std",
	"serde/std",
	"sp-application-crypto/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"rand_chacha",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-session/try-runtime",
	"sp-runtime/try-runtime",
]
