[package]
name = "pallet-storage-s3"
description = "FRAME pallet template for defining custom runtime logic. (polkadot v1.15.0)"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true , default-features = false }
scale-info = { features = [
	"derive",
], workspace = true , default-features = false }
frame-benchmarking = { optional = true, workspace = true , default-features = false}
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
log = { version = "0.4.22", default-features = false }
sp-runtime = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-io/std"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]