[package]
name = "pallet-utils"
version = "0.1.0"
edition = "2021"
authors = ["The Nerve Lab"]
description = "Common utilities for Hippius pallets"

[dependencies]
sp-runtime = { default-features = false, workspace = true }
sp-std = { workspace = true }
log = { workspace = true }
codec = {  workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
sp-consensus-babe = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
    "sp-core/std",
	"sp-consensus-babe/std"
]
try-runtime = []  # Add this line