[package]
name = "pallet-account-profile-precompile"
authors = { workspace = true }
description = "A Precompile to make pallet-account-profile accessible to pallet-evm"
edition = "2021"
version = "0.2.0"

[dependencies]
log = { workspace = true }
num_enum = { workspace = true }

pallet-account-profile = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = {  version = "3.6.12", default-features = false, features = ["derive"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }


# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }
precompile-utils = { workspace = true }
fp-account = { workspace = true }
hex = { workspace = true }


[dev-dependencies]
derive_more = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true }



# Hippius
precompile-utils = { workspace = true, features = ["std", "testing"] }

# Substrate
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-account-profile/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"fp-account/std",
]
