[package]
name = "rpc-core-node-metrics"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"
repository = { workspace = true }

[dependencies]
ethereum = { workspace = true, features = [ "with-codec" ] }

ethereum-types = { workspace = true, features = [ "std" ] }
futures = { workspace = true, features = [ "compat" ] }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
client-evm-tracing = { workspace = true }
rpc-core-types = { workspace = true }
sp-std = { workspace = true }

serde_json = { workspace = true }
sp-core = { workspace = true, features = [ "std" ] }
fc-rpc-core = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive", "std"] }
scale-info = { features = [
	"derive",
	"std",
], workspace = true }